# autotools_hello_world

./: .travis.yml  README  README.md  circle.yml  configure.ac
test/: Makefile.am  test.cc
